syntax = "proto3";

package search;

option go_package = "./;search";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service SearchService {
  rpc SearchQuestions(SearchQuestionsRequest)
      returns (SearchQuestionsResponse) {
    option (google.api.http) = {
      get : "/api/v1/search/questions"
    };
  }

  // 索引管理方法（仅用于测试/管理）
  rpc IndexAllQuestions(IndexAllQuestionsRequest)
      returns (IndexAllQuestionsResponse) {
    option (google.api.http) = {
      post : "/api/v1/search/index"
    };
  }

  rpc DeleteIndexAllQuestions(DeleteIndexAllQuestionsRequest)
      returns (DeleteIndexAllQuestionsResponse) {
    option (google.api.http) = {
      delete : "/api/v1/search/index"
    };
  }
}
message SearchQuestionsRequest {
  string query = 1; // 搜索关键词
  int32 limit = 2;  // 返回结果的最大数量
  int32 offset = 3; // 分页偏移量
}
message SearchQuestionsResponse {
  repeated Question questions = 1; // 搜索结果中的问题列表
}
message Question {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int64 author_id = 4;
  string author_name = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// 索引管理消息
message IndexAllQuestionsRequest {}

message IndexAllQuestionsResponse {
  string message = 1;
  int32 indexed_count = 2;
}

message DeleteIndexAllQuestionsRequest {}

message DeleteIndexAllQuestionsResponse { string message = 1; }